kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notary-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notary
  template:
    metadata:
      labels:
        app: notary
    spec:
      containers:
      - name: notary
        image: oydeu/app-seal:latest
        ports:
        - containerPort: 3000
