kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: notary-service
spec:
  selector:
    app: notary
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
