kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: notary-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - notary.data-container.net
    secretName: letsencrypt-notary
  rules:
  - host: notary.data-container.net
    http:
      paths:
      - path: /
        backend:
          serviceName: notary-service
          servicePort: 80
